fix title alignment

--- a/static/style.css
+++ b/static/style.css
@@ -49,12 +49,11 @@ body {
 
 }
 
-/* align title with input box */
-
 .container h2 {
-    width: 70%;
-    margin: 0 auto 20px auto;
     text-align: left;
+    margin-bottom: 12px;
+    margin-top: 0;
+    padding-left: 55px;
 }
 
 
